# latexclean

./: Cargo.toml  LICENSE  README.md
src/: main.rs
test/: main.tex
